DBDT31855 增加查询Sql时的错误提示；修改药品结果列表展示格式； 检查指标查询时增加检查项目限制；修改查询结果拼接逻辑，去除空白的列；